fix api docs auth, security argument with attributes usage
